<resources>
    <string name="app_name" translatable="false">FastBrain</string>
    <string name="registrarse">Sign up</string>
    <string name="google">Continue with google</string>
    <string name="terminos">By logging in, you accept our privacy policy</string>
    <string name="logo" translatable="false">logo de página de carga</string>
    <string name="crearsala" translatable="false">logo para crear sala</string>
    <string name="botoncrearsala" translatable="false">botón para crear sala</string>
    <string name="crear_sala">Create room</string>
    <string name="play" translatable="false">Icono de Play</string>
    <string name="iconounirsesala" translatable="false">Icono para Unirse a sala</string>
    <string name="botonunirsesala" translatable="false">Botón para unirse a la sala</string>
    <string name="textounirsesala">Join room</string>
    <string name="textocodigo">CODE</string>
    <string name="jugar">The game begins!</string>

    <string name="juegaamigos">Game settings</string>
    <string name="iconoajustes" translatable="false">Icono de la página de ajustes</string>
    <string name="dificultad">Difficulty</string>
    <string name="dificultad_alta">Hight</string>
    <string name="dificultad_media">Medium</string>
    <string name="dificultad_baja">Low</string>
    <string name="idioma">Question´s language</string>
    <string name="español">Spanish</string>
    <string name="ingles">English</string>
    <string name="numero_jugadores">Player´s number</string>
    <string name="signo_mas" translatable="false">+</string>
    <string name="numero_uno" translatable="false">1</string>
    <string name="signo_menos" translatable="false">-</string>
    <string name="boton_perfil" translatable="false">botón para acceder al perfil del usuario</string>
    <string name="loading" translatable="false">Loading...</string>
    <string name="salir">Exit</string>
    <string name="usuarioconectado">Player code</string>
    <string name="emailusuarioconectado">Player email</string>
    <string name="pregunta">QUESTION</string>
    <string name="temporizador">Time out: 10</string>
    <string name="siguiente">Next</string>
    <string name="opcion1">Option 1</string>
    <string name="opcion2">Option 2</string>
    <string name="opcion3">Option 3</string>
    <string name="opcion4">Option 4</string>
    <string name="turno">Shift</string>


    <!--Registro-->
    <string name="registro">Sign Up</string>
    <string name="contraseña">Password</string>
    <string name="email">Introduce your email</string>
    <string name="pagina_registro">¡Sign Up!</string>

    <!--Inicio Sesión-->
    <string name="pagina_iniciosesion">Log-in</string>
    <string name="volver">Back</string>
    <string name="dado_1" translatable="false">Dado 1</string>
    <string name="dado_2" translatable="false">Dado 2</string>


    <!--Perfil-->
    <string name="cambiar_contrasena">Change your password</string>
    <string name="cambiar_usuario">Change your user email</string>
    <string name="cerrar_sesion">Log-out</string>
    <string name="notificaciones">Notifications</string>
    <string name="perfil">Profile</string>
    <string name="conmfirmarnuevo">Confirm new user</string>
    <string name="usuarionuevo">New user</string>
    <string name="confirmarcontrasena">Confirm new password</string>
    <string name="contrasenanueva">New password</string>
    <string name="guardarcambios">Save changes</string>
    <string name="iniciosesion">Log-in</string>
    <string name="codigo">CREATE THE GAME</string>


</resources>