<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".ajustespartida">

    <LinearLayout
        android:id="@+id/cuadro_ajustes"
        android:layout_width="371dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/cuadro_transparente_naranja"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/configuracion_juego"
        android:layout_width="331dp"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/juegaamigos"
        android:textAlignment="center"
        android:textColor="@color/malva"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/iconoajustes"
        android:layout_width="152dp"
        android:layout_height="133dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/iconoajustes"
        android:src="@drawable/icono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dificultad"
        android:layout_width="228dp"
        android:layout_height="45dp"
        android:layout_marginBottom="456dp"
        android:fontFamily="sans-serif"
        android:text="@string/dificultad"
        android:textAlignment="center"
        android:textColor="@color/malva"
        android:textCursorDrawable="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/dificultad_botones"
        android:layout_width="299dp"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dificultad">


        <Button
            android:id="@+id/btn_baja"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/boton_izquierdo_selector"
            android:text="@string/dificultad_baja"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_media"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/boton_centro_selector"
            android:text="@string/dificultad_media"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_alta"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/boton_derecho_selector"
            android:text="@string/dificultad_alta"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/idioma_preguntas"
        android:layout_width="331dp"
        android:layout_height="46dp"
        android:layout_marginBottom="312dp"
        android:fontFamily="sans-serif"
        android:text="@string/idioma"
        android:textAlignment="center"
        android:textColor="@color/malva"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/idioma_botones"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="236dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/btn_espanol"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/boton_izquierdo_selector"
            android:text="@string/español"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_ingles"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/boton_derecho_selector"
            android:text="@string/ingles"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>


    <TextView
        android:id="@+id/numero_jugadores"
        android:layout_width="331dp"
        android:layout_height="46dp"
        android:layout_marginBottom="172dp"
        android:fontFamily="sans-serif"
        android:text="@string/numero_jugadores"
        android:textAlignment="center"
        android:textColor="@color/malva"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/contadores_botones"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numero_jugadores">

        <Button
            android:id="@+id/btn_decrementar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/boton_izquierdo_selector"
            android:text="@string/signo_menos"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/contador_jugadores"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/cuadro_transparente_naranja"
            android:gravity="center"
            android:text="@string/numero_uno"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_incrementar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/boton_derecho_selector"
            android:text="@string/signo_mas"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_crear_partida"
        android:layout_width="289dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/codigo"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contadores_botones" />


</androidx.constraintlayout.widget.ConstraintLayout>
