<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".activity_iniciarsesion">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="282dp"
        android:layout_height="249dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/icono"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />


    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/pagina_iniciosesion"
        android:textColor="@color/malva"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/emailField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage"
        app:layout_constraintVertical_bias="0.455"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="356dp"
        android:layout_height="55dp"
        android:background="@drawable/edittext_bordermalva"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/malva"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="356dp"
        android:layout_height="55dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/edittext_bordermalva"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/malva"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/roundButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/roundButton2"
        android:layout_width="356dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/naranja"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/iniciosesion"
        android:textColor="@color/purpledark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/googleLoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/googleLoginButton"
        android:layout_width="356dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/malva"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/google"
        android:textColor="@color/purpledark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage"
        app:layout_constraintVertical_bias="0.822" />

    <ImageButton
        android:id="@+id/button_reset"
        android:layout_width="73dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:contentDescription="@string/volver"
        android:src="@drawable/white_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleLoginButton"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
