<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/jugar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".activity_jugar">

    <ImageView
        android:id="@+id/imagenJugar"
        android:layout_width="272dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/letrasfastbrain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/boton_perfil"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="652dp"
        android:background="@drawable/background_circle"
        android:backgroundTint="@null"
        android:contentDescription="@string/boton_perfil"
        android:scaleType="centerInside"
        android:src="@drawable/icono_perfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emailUsuario"
        android:layout_width="343dp"
        android:layout_height="40dp"
        android:layout_marginTop="132dp"
        android:text="@string/emailusuarioconectado"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/codigoGenerado"
        android:layout_width="345dp"
        android:layout_height="43dp"
        android:layout_marginTop="184dp"
        android:text="@string/usuarioconectado"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <LinearLayout
        android:id="@+id/cuadrojugar"
        android:layout_width="259dp"
        android:layout_height="235dp"
        android:layout_marginTop="328dp"
        android:background="@drawable/cuadro_transparente"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="133dp"
        android:layout_height="52dp"
        android:layout_marginBottom="84dp"
        android:backgroundTint="@color/naranja"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/salir"
        android:textColor="@color/purpledark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
